--- a/test.html
+++ b/test.html
@@ -42,11 +42,11 @@
         });
     }
     </script>
-
-
-
 </head>
 <body>
 <button id = "getIt" onclick = "gettingJSON()">Get JSON</button>
+
+<div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
+
 </body>
 </html>
